--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <!-- Replaced div tag with header tag -->
+
+    <!-- Replaced div tag with nav tag -->
     <nav class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -25,7 +26,11 @@
             </ul>
         </div>
     </nav>
+
+    <!-- Replaced div tag with figure tag to represent image -->
     <figure class="hero"></figure>
+
+    <!-- Replaced div tag with section tag to represent main body panels -->
     <section class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -49,6 +54,8 @@
             </p>
         </div>
     </section>
+
+    <!-- Replaced div tag with aside tag to represent side panel -->
     <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -72,6 +79,8 @@
             </p>
         </div>
     </aside>
+
+    <!-- Replaced div tag with footer tag to represent footer -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
