combined classes to prevent repitition

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -11,7 +11,9 @@
 
     <!-- Replaced div tag with nav tag -->
     <nav class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+
+        <!-- I changed the seo class to an id -->
+        <h1>Hori<span id="seo">seo</span>n</h1>
         <div>
             <ul>
                 <li>
@@ -32,21 +34,21 @@
 
     <!-- Replaced div tag with section tag to represent main body panels -->
     <section class="content">
-        <div class="search-engine-optimization">
+        <div class="content-elements">
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO link tree on notebook" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div id="online-reputation-management" class="content-elements">
             <img src="./assets/images/online-reputation-management.jpg" alt="rising graph of reputation" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div id="social-media-marketing" class="content-elements">
             <img src="./assets/images/social-media-marketing.jpg" alt="Team with ideas laid out" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -57,21 +59,21 @@
 
     <!-- Replaced div tag with aside tag to represent side panel -->
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-elements">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="idea bulb turned into $" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-elements">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="idea bulb in a suit representing a person" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-elements">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="money and gears" />
             <p>
