--- a/Develop/index.html
+++ b/Develop/index.html
@@ -34,7 +34,7 @@
 
     <!-- Replaced div tag with section tag to represent main body panels -->
     <section class="content">
-        <div class="content-elements">
+        <div id="search-engine-optimization" class="content-elements">
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO link tree on notebook" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
